SERVER-71656 Add additional conditions to auxiliary intervals during interval intersection